kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: hospital-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:

      # ======================
      # DOCTORS (FIXED ROUTE)
      # ======================
      - path: /doctors/add
        pathType: Prefix
        backend:
          service:
            name: hospital-backend-service
            port:
              number: 5000

      - path: /doctors
        pathType: Prefix
        backend:
          service:
            name: hospital-backend-service
            port:
              number: 5000

      # ======================
      # PATIENTS
      # ======================
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: hospital-backend-service
            port:
              number: 5000

      # ======================
      # APPOINTMENTS
      # ======================
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: hospital-backend-service
            port:
              number: 5000

      # ======================
      # NOTIFICATION
      # ======================
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: hospital-notification-service
            port:
              number: 5000

      # ======================
      # FRONTEND (LAST)
      # ======================
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hospital-frontend-service
            port:
              number: 80
